[package]
name = "codex-async-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-util.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lib]
doctest = false
