load("//:defs.bzl", "MACOS_WEBRTC_RUSTC_LINK_FLAGS", "codex_rust_crate", "multiplatform_binaries")

codex_rust_crate(
    name = "cli",
    crate_name = "codex_cli",
    extra_binaries = [
        "//codex-rs/bwrap:bwrap",
    ],
    rustc_flags_extra = MACOS_WEBRTC_RUSTC_LINK_FLAGS,
)

multiplatform_binaries(
    name = "codex",
)
