[package]
edition.workspace = true
license.workspace = true
name = "codex-cloud-tasks-client"
version.workspace = true

[lib]
name = "codex_cloud_tasks_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
codex-api = { workspace = true }
codex-backend-client = { workspace = true }
codex-git-utils = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
