[package]
edition.workspace = true
license.workspace = true
name = "codex-home"
version.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
codex-extension-api = { workspace = true }
codex-utils-absolute-path = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
