[package]
edition.workspace = true
license.workspace = true
name = "codex-context-fragments"
version.workspace = true

[lib]
name = "codex_context_fragments"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
codex-protocol = { workspace = true }
codex-utils-string = { workspace = true }
